# HPC

AddVector/: addVector  addVector.c
AddVector/ompVector/: addVector_omp  addVector_omp.c
MultMatrix/: a.out  multMatrix  multMatrix.c
MultMatrix/Shared_memory/: MatrixMultKernel.cu  sharedMemory.sh
MultMatrix/ompMatrix/: multMatrix_omp  multMatrix_omp.c
bat-algorith/: ejecutable_main  main.c  main.sh  test_cpu.c  unity_internals.h
bat-algorith/bat/: .cpu.swp  .gpu.cu.swo  bat.h  batAlgorithm.sh  cpu.c  cpu.h  gpu  gpu.cu  gpu.out
bat-algorith/ejemplo/: seno.c
convolucion2D/: 2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  comandos_a_considerar.txt  convoConstMem  convoConstMem.cu  convoConstMem.sh  jpg data.txt
